<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollIndicators="none"
    android:background="@color/White">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/green_box">

            <Spinner
                android:id="@+id/week_select"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:entries="@array/week"
                android:spinnerMode="dropdown"/>

            <TextView
                android:id="@+id/week_select_text"
                android:layout_width="60dp"
                android:layout_height="390dp"
                android:text="@string/sat"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:gravity="center"
                android:background="@drawable/bg_box_green"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/green_box">

                <TextView
                    android:id="@+id/select_1st_text"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:background="@drawable/green_box"
                    android:text="@string/_1st_semester"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/Green"
                    android:textColorHint="@color/Black50"
                    android:backgroundTint="@color/White" />

                <Spinner
                    android:id="@+id/select_1st"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:entries="@array/semester"
                    android:spinnerMode="dropdown" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/green_box">

                <TextView
                    android:id="@+id/select_2nd_text"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_box_green"
                    android:text="@string/_2nd_semester"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/Green"
                    android:textColorHint="@color/Black50"
                    android:backgroundTint="@color/White"/>

                <Spinner
                    android:id="@+id/select_2nd"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:entries="@array/semester"
                    android:spinnerMode="dropdown" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/green_box">

                <TextView
                    android:id="@+id/select_3rd_text"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_box_green"
                    android:text="@string/_3rd_semester"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/Green"
                    android:textColorHint="@color/Black50"
                    android:backgroundTint="@color/White"/>

                <Spinner
                    android:id="@+id/select_3rd"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:entries="@array/semester"
                    android:spinnerMode="dropdown" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/green_box">

                <TextView
                    android:id="@+id/select_4th_text"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_box_green"
                    android:text="@string/_4th_semester"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/Green"
                    android:textColorHint="@color/Black50"
                    android:backgroundTint="@color/White"/>

                <Spinner
                    android:id="@+id/select_4th"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:entries="@array/semester"
                    android:spinnerMode="dropdown" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/green_box">

                <TextView
                    android:id="@+id/select_5th_text"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_box_green"
                    android:text="@string/_5th_semester"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/Green"
                    android:textColorHint="@color/Black50"
                    android:backgroundTint="@color/White"/>

                <Spinner
                    android:id="@+id/select_5th"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:entries="@array/semester"
                    android:spinnerMode="dropdown" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/green_box">

                <TextView
                    android:id="@+id/select_6th_text"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_box_green"
                    android:text="@string/_6th_semester"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/Green"
                    android:textColorHint="@color/Black50"
                    android:backgroundTint="@color/White"/>

                <Spinner
                    android:id="@+id/select_6th"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:entries="@array/semester"
                    android:spinnerMode="dropdown" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/green_box">

                <TextView
                    android:id="@+id/select_7th_text"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_box_green"
                    android:text="@string/_7th_semester"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/Green"
                    android:textColorHint="@color/Black50"
                    android:backgroundTint="@color/White"/>

                <Spinner
                    android:id="@+id/select_7th"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:entries="@array/semester"
                    android:spinnerMode="dropdown" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/green_box">

                <TextView
                    android:id="@+id/select_8th_text"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_box_green"
                    android:text="@string/_8th_semester"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/Green"
                    android:textColorHint="@color/Black50"
                    android:backgroundTint="@color/White"/>

                <Spinner
                    android:id="@+id/select_8th"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:entries="@array/semester"
                    android:spinnerMode="dropdown" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/green_box">

                <TextView
                    android:id="@+id/select_9th_text"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_box_green"
                    android:text="@string/_9th_semester"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/Green"
                    android:textColorHint="@color/Black50"
                    android:backgroundTint="@color/White"/>

                <Spinner
                    android:id="@+id/select_9th"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:entries="@array/semester"
                    android:spinnerMode="dropdown" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/green_box">

                <TextView
                    android:id="@+id/select_10th_text"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_box_green"
                    android:text="@string/_10th_semester"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/Green"
                    android:textColorHint="@color/Black50"
                    android:backgroundTint="@color/White"/>

                <Spinner
                    android:id="@+id/select_10th"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:entries="@array/semester"
                    android:spinnerMode="dropdown" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/green_box">

                <TextView
                    android:id="@+id/select_11th_text"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_box_green"
                    android:text="@string/_11th_semester"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/Green"
                    android:textColorHint="@color/Black50"
                    android:backgroundTint="@color/White"/>

                <Spinner
                    android:id="@+id/select_11th"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:entries="@array/semester"
                    android:spinnerMode="dropdown" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/green_box">

                <TextView
                    android:id="@+id/select_12th_text"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_box_green"
                    android:text="@string/_12th_semester"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/Green"
                    android:textColorHint="@color/Black50"
                    android:backgroundTint="@color/White"/>

                <Spinner
                    android:id="@+id/select_12th"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:entries="@array/semester"
                    android:spinnerMode="dropdown" />


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/sa_col1">

            </include>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/sa_col2">

            </include>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/sa_col3">

            </include>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/sa_col4">

            </include>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/sa_col5">

            </include>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/sa_col6">

            </include>

        </LinearLayout>


    </LinearLayout>

</HorizontalScrollView>